# medical-clinic-checkin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
api_rest/: .env.example  README.md  clinica.db  docker-compose.yml  railway.toml  requirements.txt  reset_db.sh  run.py  start_api.sh  stop_api.sh
api_rest/app/: __init__.py  main.py
api_rest/scripts/: seed_data.py
bot/: .env.example  README.md  requirements.txt  start_bot.sh  stop_bot.sh
bot/src/: bkp_handlers.py  bkp_utils.py  telegram_bot.py
config/: FreeRTOSConfig.h  api_config.hpp  display_config.hpp  fingerprint_config.hpp  lv_conf.h  lvgl_tick_custom.h  lwipopts.h  mongoose_config.h  pin_config.hpp  qr_code_reader_config.hpp  sntp_callbacks.h  wifi_config.hpp
docs/diagrams/: class_diagrams.md  hardware_diagram.md  sequence_diagrams.md  software_architecture_layers_diagram.md  state_machine_diagram.md
hardware/Gerber_PCB/: Pcb_Clinicas medicas-B_Adhesive.gba  Pcb_Clinicas medicas-B_Cu.gbl  Pcb_Clinicas medicas-B_Fab.gbr  Pcb_Clinicas medicas-B_Mask.gbs  Pcb_Clinicas medicas-B_Paste.gbp  (+20 more)
medical-clinic-checkin-pico/: CMakeLists.txt  README.md
medical-clinic-checkin-pico/src/ui/screens/: Build_System.txt  CMakeLists.txt  confirmation_screen.cpp  confirmation_screen.hpp  error_screen.hpp  fingerprint_verify_screen.cpp  fingerprint_verify_screen.hpp  qrcode_screen.cpp  qrcode_screen.hpp  saving_screen.cpp  saving_screen.hpp  ui_wifi_icon.cpp  ui_wifi_icon.hpp  wifi_connecting_screen.cpp  wifi_connecting_screen.hpp
src/: main.cpp
(+219 files in other folders)
